# textpieces

./: .gitignore  .gitmodules  .releaserc.yml  CHANGELOG.md  CONTRIBUTING.md  COPYING  NEXT-RELEASE.xml  README.md  com.github.liferooter.textpieces.json  com.github.liferooter.textpieces.json~  com.github.liferooter.textpieces.yaml  meson.build  textpieces.doap
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  test.yml
build-aux/flatpak/: com.github.liferooter.textpieces.json  com.github.liferooter.textpieces.yaml
build-aux/meson/: postinstall.py
ci/: generate-tools-po.sh  prepare-release.sh  release-to-flathub.sh  update-po.sh
data/: com.github.liferooter.textpieces.appdata.xml.in  com.github.liferooter.textpieces.desktop.in  com.github.liferooter.textpieces.desktop.in.in  com.github.liferooter.textpieces.gschema.xml  meson.build  textpieces.gresource.xml  tools.json  tools.json.license
data/css/: main.css
data/ui/: about.ui  argument.ui  error-message.ui  preferences.ui  shortcuts.ui  tool-entry.ui  tool-row.ui  tools-popover.ui  window.ui
po/: LINGUAS  POTFILES  cs.po  de.po  es.po  fr.po  generate-tools-po.sh  hu.po  it.po  meson.build  messages.po  nl.po  pt_BR.po  ru.po  textpieces.pot  tools-es.po  tools.pot  tools.pot.license  tr.po  update-po.sh  zh_CN.po
resources/: meson.build  style-dark.css  style.css  textpieces.gresource.xml
resources/icons/scalable/status/: fingerprint-symbolic.svg.license  rss-symbolic.svg.license
resources/ui/: CustomToolPage.blp  CustomToolPage.ui  CustomToolRow.ui  Editor.blp  Editor.ui  NewToolDialog.ui  NewToolPage.blp  NewToolPage.ui  Preferences.blp  Preferences.ui  Search.blp  SearchBar.blp  SearchBar.ui  SearchEntry.blp  SearchEntry.ui  ShortcutsWindow.blp  ShortcutsWindow.ui  ThemeSwitcher.ui  ToolSettings.blp  ToolSettings.ui  Window.blp  Window.ui  build-ui.sh  meson.build  tools-popover.ui  window.ui
screenshots/: slide5.png.license
scripts/: FormatJson.js  base64-decode  base64-decode.py  base64-encode  base64-encode.sh  camelcase  capitalize  count-lines  count-lines.py  count-symbols  count-symbols.py  count-words  count-words.py  countWords.py  decimal-to-hexadecimal  escape-html  escape-html.py  escape-string  escape-string.py  escape-url  escape-url.py  escapeHTML.py  escapeString.py  filter-regex  filter-regex.py  filter-substring  filter-substring.py  format-json  format-json.py  format-xml  format-xml.py  hexadecimal-to-decimal  html-table-to-csv  json-to-yaml  json-to-yaml.py  jsonToYAML.py  lowercase  md5  md5.py  minify-json  (+50 more)
src/: AboutDialog.vala  Application.vala  Argument.vala  CustomToolPage.vala  CustomToolRow.vala  Editor.vala  ErrorDialog.vala  JSTool.vala  MainWindow.vala  NewToolDialog.vala  NewToolPage.vala  Preferences.vala  Recoloring.vala  Search.vala  SearchBar.vala  ShortcutsWindow.vala  ThemeSwitcher.vala  Tool.vala  ToolEntry.vala  ToolPopover.vala  ToolRow.vala  ToolSettings.vala  ToolsController.vala  Utils.vala  Window.vala  about.vala  application.vala  argument.vala  error-message.vala  main.vala  meson.build  preferences.vala  shortcuts.vala  style.css  textpieces.gresource.xml  tool-row.vala  tools.vala  window.ui  window.vala
src/resources/: textpieces.gresource.xml
src/resources/css/: style.css
src/resources/ui/: about.ui  preferences.ui  shortcuts.ui  window.ui
src/tools/: Tool.vala
src/utils/: Recoloring.vala
src/vapi/: config.vapi
src/vapis/: config.vapi
src/widgets/: Editor.vala  Search.vala  SearchEntry.vala  Window.vala
src/widgets/preferences/: Preferences.vala  ToolSettings.vala
src/widgets/preferences/pages/: NewToolPage.vala
subprojects/: blueprint-compiler.wrap  gtksourceview.wrap  json-glib.wrap  libadwaita.wrap  libsass.wrap  sassc.wrap
